@@ -39,3 +39,4 @@
 
 2.0.6        XX.YY.2016
  - Update von Jackcess: Es erfolgt nun keine Warnung mehr beim Anzeigen der Stammdaten.
+ - Bei völliger Ergebnisgleicheit wird nun die selbe Platzierung in der Ergebnisliste genutzt.
